--- a/blog-single.html
+++ b/blog-single.html
@@ -1,24 +1,24 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=1" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=2" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=3" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=4" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=5" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=6" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=7" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=8" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=9" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=10" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=11" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=12" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=13" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=14" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=15" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=16" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=17" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
-<iframe src="http://cpm.oneptp.com/ax/pop2.php?uid=508423&ad=18" name="myIFrame" width="100px" height="100px" style="border: none #000000;"></iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=1"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=2"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=3"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=4"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=5"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=6"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=7"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=8"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=9"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=10"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=11"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=12"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=13"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=14"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=15"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=16"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=17"> </iframe>
+<iframe src="http://cpm.oneptp.com/ax/pop.php?uid=508423&ad=18"> </iframe>
 
 
 
